<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:fitsSystemWindows="true"
        android:theme="@style/InditestToolbarStyle.Transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleGravity="top"
            app:collapsedTitleTextAppearance="@style/InditestTitleTextAppearance.Inverse"
            app:contentScrim="@color/transparent"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginTop="@dimen/default_padding"
            app:expandedTitleTextAppearance="@style/InditestTitleTextAppearance.Inverse"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/transparent"
            app:titleCollapseMode="scale">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/headerImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/user_detail_header"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="72dp"
                app:contentInsetStartWithNavigation="10dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/InditestToolbarStyle.Transparent" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_edit"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/white"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_edit"
                android:tint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_camera"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/white"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_camera"
                android:tint="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/btn_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="btn_camera, btn_edit" />

            <mobi.dev33.inditest.ui.view.IconifiedItemView
                android:id="@+id/item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginEnd="@dimen/default_padding"
                app:iconLeft="@drawable/ic_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_barrier"
                app:subtitleTextSize="16sp"
                app:title="@string/user_name_surname"
                app:titleTextSize="14sp" />

            <mobi.dev33.inditest.ui.view.IconifiedItemView
                android:id="@+id/item_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginEnd="@dimen/default_padding"
                app:iconLeft="@drawable/ic_email"
                app:layout_constraintBottom_toTopOf="@+id/item_gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_name"
                app:subtitleTextSize="16sp"
                app:title="@string/user_email"
                app:titleTextSize="14sp" />

            <mobi.dev33.inditest.ui.view.IconifiedItemView
                android:id="@+id/item_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginEnd="@dimen/default_padding"
                app:iconLeft="@drawable/ic_gender"
                app:layout_constraintBottom_toTopOf="@+id/item_registry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_email"
                app:subtitleTextSize="16sp"
                app:title="@string/user_gender"
                app:titleTextSize="14sp" />

            <mobi.dev33.inditest.ui.view.IconifiedItemView
                android:id="@+id/item_registry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginEnd="@dimen/default_padding"
                app:iconLeft="@drawable/ic_calendar"
                app:layout_constraintBottom_toTopOf="@+id/item_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_gender"
                app:subtitleTextSize="16sp"
                app:title="@string/user_registry"
                app:titleTextSize="14sp" />

            <mobi.dev33.inditest.ui.view.IconifiedItemView
                android:id="@+id/item_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginEnd="@dimen/default_padding"
                app:iconLeft="@drawable/ic_phone"
                app:layout_constraintBottom_toTopOf="@+id/item_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_registry"
                app:subtitleTextSize="16sp"
                app:title="@string/user_phone"
                app:titleTextSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:text="@string/user_address"
                android:textAppearance="@style/InditestSmallTextAppearance"
                app:layout_constraintBottom_toTopOf="@+id/map"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_phone" />

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="0dp"
                android:layout_height="143dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginBottom="@dimen/big_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_address" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_padding"
        android:background="@drawable/shape_circle"
        android:padding="1dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|left|start">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/userProfilePic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_circle"
            app:srcCompat="@drawable/user_picture_placeholder" />
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="30dp"
        android:minHeight="?attr/actionBarSize"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="top"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/InditestToolbarStyle.Transparent"
        app:titleTextColor="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
